kubernetes/apps/hydra/03-hydra-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hydra
spec:
  serviceName: "hydra-headless"
  replicas: 2
  selector:
    matchLabels:
      app: hydra
  template:
    metadata:
      labels:
        app: hydra
    spec:
      containers:
      - name: hydra
        image: linuxserver/hydra2:latest
        ports:
        - containerPort: 5076
          name: web
        volumeMounts:
        - name: nfs-hydra-config
          mountPath: /config
      volumes:
      - name: nfs-hydra-config
        persistentVolumeClaim:
          claimName: hydra-config
      restartPolicy: Always
