kubernetes/apps/hydra/01-hydra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-service
  labels:
    app: hydra
spec:
  ports:
  - port: 5076
    name: web
  selector:
    app: hydra
