kubernetes/apps/hydra/02-hydra-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-headless
  labels:
    app: hydra
spec:
  ports:
  - port: 5076
    name: web
  clusterIP: None
  selector:
    app: hydra
