kubernetes/apps/hydra/04-hydra-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hydra-ingress-web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`hydra.<EXAMPLE.COM>`)
    kind: Rule
    middlewares:
    - name: redirect
    services:
    - name: hydra-service
      port: 5076
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hydra-ingress-websecure
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`hydra.<EXAMPLE.COM>`)
    kind: Rule
    middlewares:
    - name: google-oauth
    services:
    - name: hydra-service
      port: 5076
  tls:
    certResolver: default
    options: 
      name: mintls12
      namespace: default
